clap_derive/tests/ui/external_subcommand_wrong_type.stderr
error[E0308]: mismatched types
  --> $DIR/external_subcommand_wrong_type.rs:13:15
   |
13 |     Other(Vec<CString>),
   |               ^^^^^^^ expected struct `std::ffi::CString`, found struct `std::ffi::OsString`
   |
   = note: expected struct `std::vec::Vec<std::ffi::CString>`
              found struct `std::vec::Vec<std::ffi::OsString>`
